--- a/Glass/Relatorios/rptCotacaoCompraCalculada.rdlc
+++ b/Glass/Relatorios/rptCotacaoCompraCalculada.rdlc
@@ -1598,6 +1598,38 @@
         <ZIndex>4</ZIndex>
         <Style />
       </Tablix>
+      <Textbox Name="textbox19">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>=IIf(Parameters!TipoCalculo.Value &lt;&gt; ".", "Prioridade de cálculo: " &amp; Parameters!TipoCalculo.Value, "")</Value>
+                <Style>
+                  <FontSize>14pt</FontSize>
+                  <FontWeight>Bold</FontWeight>
+                </Style>
+              </TextRun>
+            </TextRuns>
+            <Style>
+              <TextAlign>Center</TextAlign>
+            </Style>
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>textbox3</rd:DefaultName>
+        <Top>1.75976cm</Top>
+        <Left>5.73251cm</Left>
+        <Height>0.75cm</Height>
+        <Width>12.9325cm</Width>
+        <ZIndex>5</ZIndex>
+        <Style>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
     </ReportItems>
     <Height>6.80952cm</Height>
     <Style />
@@ -1818,6 +1850,10 @@
       <DataType>String</DataType>
       <AllowBlank>true</AllowBlank>
       <Prompt>Report_Parameter_2</Prompt>
+    </ReportParameter>
+    <ReportParameter Name="TipoCalculo">
+      <DataType>String</DataType>
+      <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
   </ReportParameters>
   <Language>pt-BR</Language>
