--- a/Glass/Vue/_Compartilhado/Templates/Base/CampoBuscaComPopup.html
+++ b/Glass/Vue/_Compartilhado/Templates/Base/CampoBuscaComPopup.html
@@ -1,4 +1,4 @@
-﻿<span style="display: inline-block; white-space: nowrap; width: 150px">
+﻿<span style="display: inline-block; width: 150px">
     <campo-busca v-bind:item-selecionado.sync="itemSelecionadoAtual" v-bind:id.sync="idAtual" v-bind:nome.sync="nomeAtual"
         v-bind:campo-id="campoId" v-bind:campo-nome="campoNome" v-bind:funcao-buscar-itens="funcaoBuscarItens"
         v-bind:pre-carregar-itens="preCarregarItens" v-bind="$attrs"
