#76836 Foi inserido uma validação de usuario logado no painelMaster que de em 5 em 5 minutos vai marcar como usuario logado. pois o tempo de atualização do painel é maior que o tempo de usuairos logados no sistema

--- a/Glass/PainelGraficos.master
+++ b/Glass/PainelGraficos.master
@@ -63,6 +63,8 @@
         // Atualizar automaticamente
         setTimeout(function() { atualizarPagina() }, 1000 * <%= TempoSegundosAtualizar %>);
 
+        setInterval(function(){ PainelGraficos.GetUsuarioLogado() } , 60000 * 5 );
+
         function aplicaEscala(objeto, escala)
         {
             objeto.css("zoom", escala);
